made the mobile navMenu fixed so it is always visible when active

--- a/app/ui/shared/navbar/navbar.module.css
+++ b/app/ui/shared/navbar/navbar.module.css
@@ -19,11 +19,11 @@
   background: linear-gradient(var(--color-light-cream-bg) 45%, rgba(254,252,247, 0.1));
   border-radius: 0 0 1.2rem 1.2rem;
   padding: 4rem 0;
-  position: absolute;
+  position: fixed;
   top: 10rem;
   right: 5%;
   left: 5%;
-  bottom: 5%;
+  bottom: 0;
   width: 90%;
   z-index: 1000;
 }
